# [1.5.??] - 2019-04-25

## New

- add `rotateX-180` helper


# [1.5.17] - 2019-04-24

## New

- add `prefers-reduced-motion: reduce` MQ (for vestibular disorder)

## Updated/fixes

- set up max width for input/select/textarea
- fix select text overflow
- updated `ng-valid` to `is-valid` (byebye Angular)
- fix `pm-label` alignment


# [1.5.16] - 2019-04-18

## New

- add warning styles for input (contrast to enhance)


# [1.5.15] - 2019-04-17

## New

- add error styles (using `aria-invalid="true"` and CSS transforms)
- add `details`/`summary` styles
- add `scroll-smooth-touch` class

## Updated/fixes

- fixed a minification issue with `::placeholder` for `searchbox-container` styles
- updated reference for CSS icons `css-caret-close`
- fix topnav “shrink” icons in rwd

## Misc

- had to activate `unsafe-inline` for CSP `style-src` for design system website (bugs on Firefox/inline style)


# [1.5.14] - 2019-04-10

## Updated/fixes

- remove `flex-item-grow-1-5` item to `flex-item-grow-2`.


# [1.5.11] - 2019-04-10

## Updated/fixes

- update badge height (Chrome bug)
- add `flex-item-grow-1-5` item.
- fix sticky subnav


# [1.5.11] - 2019-04-10

## Updated/fixes

- conversation row class


# [1.5.10] - 2019-04-09

## Updated/fixes

- add missing CSS fragment in how to use the design system.
- fix print version


# [1.5.9] - 2019-04-05

## New

- add selected state for conversation styles
- add a DO/DON’T

## Updated/fixes

- fixed a display bug in code sections with Prism
- fixed a display bug in conversations


# [1.5.8] - 2019-04-05

## New

- conversation styles
- add class `w0` (`width: 0`)

## Updated/fixes

- reordered padding/margin helpers


# [1.5.7] - 2019-04-04

## New

- add color rules

## Updated/fixes

- fix small bug/cleanup
- fixed color wrong values


# [1.5.6] - 2019-04-03

## New

- add example of settings layout
- add `aria-busy="true"` state to toggle

## Updated/fixes

- fixed RTL for top search and navigation
- fixed logo plan with RTL