@@ -356,17 +356,17 @@ subsection: buttons
 <p>You may also use <code>.pm-button--for-icon</code> modifier, specially designed to adapt <code>padding</code> values for buttons that contains only an icon. Example:</p>
 
   <div class="pm-group-buttons">
-    <button class="pm-button pm-button--for-icon pm-group-button">
+    <button class="pm-group-button pm-button pm-button--for-icon pm-group-button">
       <svg viewBox="0 0 16 16" class="icon-16p fill-global-grey mtauto mbauto" role="img" aria-hidden="true" focusable="false">
         <use xlink:href="#shape-folder"></use>
       </svg>
     </button>
-    <button class="pm-button pm-button--for-icon pm-group-button">
+    <button class="pm-group-button pm-button pm-button--for-icon pm-group-button">
       <svg viewBox="0 0 16 16" class="icon-16p fill-global-grey mtauto mbauto" role="img" aria-hidden="true" focusable="false">
         <use xlink:href="#shape-label"></use>
       </svg>
     </button>
-    <button class="pm-button pm-button--for-icon pm-group-button">
+    <button class="pm-group-button pm-button pm-button--for-icon pm-group-button">
       <svg viewBox="0 0 16 16" class="icon-16p fill-global-grey mtauto mbauto" role="img" aria-hidden="true" focusable="false">
         <use xlink:href="#shape-caret"></use>
       </svg>
@@ -374,9 +374,9 @@ subsection: buttons
   </div>
 
   <pre class=" language-markup"><code>&lt;div class="pm-group-buttons"&gt;
-  &lt;button class="pm-button <strong>pm-button--for-icon</strong>"&gt;…&lt;/button&gt;
-  &lt;button class="pm-button <strong>pm-button--for-icon</strong>"&gt;…&lt;/button&gt;
-  &lt;button class="pm-button <strong>pm-button--for-icon</strong>"&gt;…&lt;/button&gt;
+  &lt;button class="pm-group-button pm-button <strong>pm-button--for-icon</strong>"&gt;…&lt;/button&gt;
+  &lt;button class="pm-group-button pm-button <strong>pm-button--for-icon</strong>"&gt;…&lt;/button&gt;
+  &lt;button class="pm-group-button pm-button <strong>pm-button--for-icon</strong>"&gt;…&lt;/button&gt;
 &lt;/div&gt;</code></pre>
 
 <h3 class="mt1">Loading button</h3>
